Added TOC to index. Changed some styling.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
+    <div name="top" class="wrapper">
 
         {% include header.html %}
 
