--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -1,3 +1,34 @@
 header p.tagline{
     font-size: 16pt;
 }
+
+header nav ul {
+    margin: 0;
+    padding: 0;
+
+}
+header nav li {
+    list-style: none;
+    font-size: 14pt;
+}
+
+div.wrapper section nav,
+div.wrapper section nav ul,
+div.wrapper section nav ul li {
+    margin: 0;
+    padding: 0;
+}
+div.wrapper section nav {
+    float: right;
+}
+div.wrapper section nav ul li {
+    list-style: none;
+    float: left;
+    padding: 10px;
+}
+
+p.toplink {
+    text-align: right;
+    padding: 10px 0;
+    margin: 0;
+}
