Hiding my development of the new site content. Use index.html for the 'Coming Soon...' page the public will see. Use home.html for the content that is under development.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
 
     <div align="center">
-        <a href="{{ site.baseurl }}/index.html">
+        <a href="{{ site.baseurl }}/home.html">
             <img src="{{ site.baseurl }}/images/250x250numentaicon.gif"/>
             <h1>{{ site.title }}</h1>
         </a>
@@ -18,9 +18,9 @@
 
     <nav>
         <ul>
-            <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
+            <li><a href="{{ site.baseurl }}/home.html">Home</a></li>
             <li><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
-            <li><a href="{{ site.baseurl }}/index.html#frequently_asked_questions">FAQ</a></li>
+            <li><a href="{{ site.baseurl }}/home.html#frequently_asked_questions">FAQ</a></li>
         </ul>
     </nav>
 
