Changing verbiage to NuPIC from opencla. Added favicon.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,12 @@
         <p class="tagline">{{ site.tagline }}</p>
     </div>
 
-    <p class="view"><a href="https://github.com/numenta/opencla">View the Project on GitHub <small>numenta/opencla</small></a></p>
+    <p class="view"><a href="https://github.com/numenta/nupic">View the Project on GitHub <small>numenta/nupic</small></a></p>
 
     <ul class="buttons">
-        <li><a href="https://github.com/numenta/opencla/zipball/master">Download <strong>ZIP File</strong></a></li>
-        <li><a href="https://github.com/numenta/opencla/tarball/master">Download <strong>TAR Ball</strong></a></li>
-        <li><a href="https://github.com/numenta/opencla">View On <strong>GitHub</strong></a></li>
+        <li><a href="https://github.com/numenta/nupic/zipball/master">Download <strong>ZIP File</strong></a></li>
+        <li><a href="https://github.com/numenta/nupic/tarball/master">Download <strong>TAR Ball</strong></a></li>
+        <li><a href="https://github.com/numenta/nupic">View On <strong>GitHub</strong></a></li>
     </ul>
 
     {% include nav.html %}
