Fixing mixed up links to home/index.

--- a/_layouts/temp.html
+++ b/_layouts/temp.html
@@ -19,7 +19,7 @@
         <header>
 
             <div align="center">
-                <a href="{{ site.baseurl }}/home.html">
+                <a href="{{ site.baseurl }}/index.html">
                     <img src="{{ site.baseurl }}/images/250x250numentaicon.gif"/>
                     <h1>{{ site.title }}</h1>
                 </a>
