--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
 
     <div align="center">
-        <a href="{{ site.baseurl }}/index.html">
+        <a href="{{ site.baseurl }}/home.html">
             <img src="{{ site.baseurl }}/images/250x250numentaicon.gif"/>
             <h1>{{ site.title }}</h1>
         </a>
