Reconfiguring static site structure with landing page, project details page. More to come.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer>
     <p>This project is maintained by <a href="https://github.com/numenta">numenta</a></p>
+    <p>Questions?&nbsp;&nbsp;&nbsp;<a href="mailto:help@numenta.org">help@numenta.org</a></p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 </footer>
