Added another page for contribution details.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,6 +2,7 @@
     <ul>
         <li><a href="{{ site.baseurl }}/home.html">Home</a></li>
         <li><a href="{{ site.baseurl }}/nupic.html">Nupic</a></li>
+        <li><a href="{{ site.baseurl }}/contribute.html">Contribute</a></li>
         <li><a href="{{ site.baseurl }}/blogs/jeff/index.html">Jeff's Blog</a></li>
         <li><a href="{{ site.baseurl }}/blogs/numenta/index.html">Numenta Blog</a></li>
     </ul>
